 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES

PIG-3485: Remove CastUtils.bytesToMap(byte[] b) method from LoadCaster interface (cheolsoo) 

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-2207: Support custom counters for aggregating warnings from different udfs (aniket486)

IMPROVEMENTS

PIG-3851: Upgrade jline to 2.11 (daijy)

PIG-3884: Move multi store counters to PigStatsUtil from MRPigStatsUtil (rohini)

PIG-3591: Refactor POPackage to separate MR specific code from packaging (mwagner via cheolsoo)

PIG-3449: Move JobCreationException to org.apache.pig.backend.hadoop.executionengine (cheolsoo)

PIG-3765: Ability to disable Pig commands and operators (prkommireddi)

PIG-3731: Ability to specify local-mode specific configuration (useful for local/auto-local mode) (aniket486)

PIG-3793: Provide info on number of LogicalRelationalOperator(s) used in the script through LogicalPlanData (prkommireddi)

PIG-3778: Log list of running jobs along with progress (rohini)

PIG-3675: Documentation for AccumuloStorage (elserj via daijy)

PIG-3648: Make the sample size for RandomSampleLoader configurable (cheolsoo)

PIG-259: allow store to overwrite existing directroy (nezihyigitbasi via daijy)

PIG-2672: Optimize the use of DistributedCache (aniket486)

PIG-3238: Pig current releases lack a UDF Stuff(). This UDF deletes a specified length of characters
 and inserts another set of characters at a specified starting point (nezihyigitbasi via daijy)

PIG-3299: Provide support for LazyOutputFormat to avoid creating empty files (lbendig via daijy)

PIG-3642: Direct HDFS access for small jobs (fetch) (lbendig via cheolsoo)

PIG-3730: Performance issue in SelfSpillBag (rajesh.balamohan via rohini)

PIG-3654: Add class cache to PigContext (tmwoodruff via daijy)

PIG-3463: Pig should use hadoop local mode for small jobs (aniket486)

PIG-3573: Provide StoreFunc and LoadFunc for Accumulo (elserj via daijy)
